Global Footprint alignment fixes

--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/globalfootprintcontainer.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/globalfootprintcontainer.scss
@@ -5,20 +5,13 @@
 
 .globalfootprintcontainer {
   .main-text-section {
-    margin-left: auto;
-    margin-right: auto;
-    padding: 48px 12px;
-
-    @include respond-to-min($tablet) {
-      width: 756px;
-    }
+    padding: toRem(24) 0;
 
     @include respond-to-min($desktop) {
-      width: 976px;
+      padding: toRem(48) 0;
     }
-
-    @include respond-to-min($desktop-wide) {
-      width: 1224px;
+    .container {
+      @extend %container;
     }
 
     &__textContent p {
@@ -47,11 +40,10 @@
     width: 100%;
 
     img {
-      height: 100%;
+      height: toRem(484);
       width: 100%;
 
       @include respond-to-min($desktop) {
-        height: 484px;
         object-fit: cover;
       }
     }
@@ -135,8 +127,7 @@
       width: 100%;
       height: 100%;
       .container {
-        margin-left: auto;
-        margin-right: auto;
+        @extend %container;
         position: relative;
       }
       .global-slide-info {
@@ -282,7 +273,7 @@
             letter-spacing: normal;
             line-height: 1.75;
             margin: 0 0 12px 1px;
-            
+
             @include font-family-lato();
           }
         }
@@ -345,6 +336,7 @@
             }
             .learn-more {
               display: inline-block;
+              @include font-family-lato;
               &::before {
                 padding: 3.3px;
                 right: -10px;
@@ -450,7 +442,7 @@
       .swiper-gallery-slide {
         .global-slide-content {
           .global-slide-info {
-            right: 0;
+            right: toRem(12);
             left: auto;
             text-align: right;
             .learn-more {
@@ -484,6 +476,8 @@
               .learn-more {
                 &::before {
                   right: auto;
+                  transform: translateY(-50%) rotate(135deg);
+                  left: toRem(-15);
                 }
               }
             }
